Feat: refactor role and permission management by removing update methods and adding validation components